--- a/_includes/Education.html
+++ b/_includes/Education.html
@@ -22,7 +22,7 @@
           <strong>Feb 2017 - Jul 2018</strong>
         </div>
         <div align="right" style="flex-grow: 1; margin-top: 23px">
-         Associate’s Degree in Computer Technology at <a href="http://utramig.mg.gov.br">UTRAMIG<\a> 
+         Associate’s Degree in Computer Technology at <a href="http://utramig.mg.gov.br">UTRAMIG</a> 
         </div>
       </h6>
 
